--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    test 1 2 3
+  <header>
+    <nav>
+      <button id="home-tab">Home</button>
+      <button id="menu-tab">Menu</button>
+      <button id="contact-tab">Contact</button>
+    </nav>
+  </header>
+  
+  <div id="content"></div>
 </body>
 </html>
